--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "angular-firebase",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "lint": "eslint 'src/**/*.{ts,html}'"
   },
   "lint-staged": {
+    "*.{ts,html}": "eslint --fix",
     "*.{ts,html,scss}": "prettier --write"
   },
   "private": true,
@@ -31,6 +30,9 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
