--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,26 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
-    "experimentalDecorators": true,
-    "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
-    "useDefineForClassFields": false,
+
+    "target": "ES2020",
     "lib": ["ES2022", "dom"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
+    "module": "ES2020",
+    "moduleResolution": "node",
+
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
 
     "strict": true,
     "alwaysStrict": true,
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
     "exactOptionalPropertyTypes": true,
-    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
@@ -37,6 +40,8 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
