--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "scripts": {
     "start": "ng serve",
     "build": "ng build",
-    "lint": "eslint 'src/**/*.{ts,html}'"
-  },
-  "lint-staged": {
-    "*.{ts,html}": "eslint --fix",
-    "*.{ts,html,scss}": "prettier --write"
+    "lint": "eslint --quiet"
   },
   "private": true,
   "dependencies": {
@@ -33,14 +29,12 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
-    "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "lint-staged": "^15.2.0",
     "typescript": "~5.2.2"
   }
 }
