Add forgot password functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,8 @@
     "paths": {
       "@libs/auth": ["libs/auth/index.ts"],
       "@libs/home": ["libs/home/index.ts"],
-      "@libs/login": ["libs/login/index.ts"]
+      "@libs/login": ["libs/login/index.ts"],
+      "@libs/reset-password": ["libs/reset-password/index.ts"]
     }
   },
   "include": ["**/*.ts"],
