Switch from Firebase to Supabase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,11 +43,13 @@
     "skipLibCheck": true,
 
     "paths": {
+      "@env": ["src/environments/environment"],
       "@libs/auth": ["libs/auth/index.ts"],
       "@libs/dashboards": ["libs/dashboards/index.ts"],
       "@libs/home": ["libs/home/index.ts"],
       "@libs/login": ["libs/login/index.ts"],
-      "@libs/reset-password": ["libs/reset-password/index.ts"]
+      "@libs/reset-password": ["libs/reset-password/index.ts"],
+      "@libs/supabase": ["libs/supabase/index.ts"]
     }
   },
   "include": ["**/*.ts"],
