--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "sourceType": "module"
   },
   "rules": {
-    // Add your custom rules here
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
