--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,11 @@
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "extends": ["plugin:@ngrx/strict-requiring-type-checking"]
+    }
+  ]
 }
