Switch homepage to NgRx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": ["plugin:@ngrx/strict-requiring-type-checking"]
+      "extends": ["plugin:@ngrx/strict-requiring-type-checking"],
+      "rules": {
+        "@ngrx/avoid-combining-selectors": "off"
+      }
     }
   ]
 }
