--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@supabase/supabase-js": "^2.39.1",
     "rxjs": "~7.8.0",
@@ -26,6 +27,7 @@
     "@angular-devkit/build-angular": "^17.0.8",
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.0",
+    "@ngrx/eslint-plugin": "^17.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
@@ -36,7 +38,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2",
-    "@ngrx/eslint-plugin": "^17.0.1"
+    "typescript": "~5.2.2"
   }
 }
