--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@supabase/supabase-js": "^2.39.1",
+    "apexcharts": "^3.45.1",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
