--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,10 +45,14 @@
     "paths": {
       "@env": ["src/environments/environment"],
       "@libs/auth": ["libs/auth/index.ts"],
-      "@libs/dashboards": ["libs/dashboards/index.ts"],
+      "@libs/dashboard": ["libs/dashboard/index.ts"],
+      "@libs/dashboard/client": ["libs/dashboard/client/index.ts"],
+      "@libs/dashboard/page": ["libs/dashboard/page/index.ts"],
       "@libs/home": ["libs/home/index.ts"],
       "@libs/login": ["libs/login/index.ts"],
       "@libs/reset-password": ["libs/reset-password/index.ts"],
+      "@libs/sidebar": ["libs/sidebar/index.ts"],
+      "@libs/store": ["libs/store/index.ts"],
       "@libs/supabase": ["libs/supabase/index.ts"]
     }
   },
