--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "^17.0.0",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
+    "@ngrx/store-devtools": "^17.0.1",
     "@supabase/supabase-js": "^2.39.1",
     "apexcharts": "^3.45.1",
     "ng-apexcharts": "^1.8.0",
