Update .prettierrc to ignore HTML whitespace sensitivity

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,6 @@
   "arrowParens": "always",
   "endOfLine": "lf",
   "trailingComma": "es5",
-  "htmlWhitespaceSensitivity": "strict",
+  "htmlWhitespaceSensitivity": "ignore",
   "proseWrap": "never"
 }
