Update import paths for User model

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,8 @@
       "@libs/sidebar": ["libs/sidebar/index.ts"],
       "@libs/store": ["libs/store/index.ts"],
       "@libs/supabase": ["libs/supabase/index.ts"],
-      "@libs/toaster": ["libs/toaster/index.ts"]
+      "@libs/toaster": ["libs/toaster/index.ts"],
+      "@libs/user": ["libs/user/index.ts"]
     }
   },
   "include": ["**/*.ts"],
