--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npx ng build --prod
+        run: npx ng build --configuration=production
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
